--- a/LCEL.ipynb
+++ b/LCEL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "b5553553",
    "metadata": {},
    "outputs": [],
@@ -15,14 +15,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "b1ac945b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dhruvyellanki/Documents/simple_LLM_application_using_LCEL/LCEL_venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ChatGroq(client=<groq.resources.chat.completions.Completions object at 0x13bcfd030>, async_client=<groq.resources.chat.completions.AsyncCompletions object at 0x13bcfcf40>, model_name='llama-3.1-8b-instant', model_kwargs={}, groq_api_key=SecretStr('**********'))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_groq import ChatGroq\n",
+    "model = ChatGroq(model=\"llama-3.1-8b-instant\", groq_api_key=groq_api_key)\n",
+    "model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e51c5651",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.messages import SystemMessage, HumanMessage\n",
+    "messages=[\n",
+    "    SystemMessage(content=\"Translate the following from English to French\"),\n",
+    "    HumanMessage(content=\"Hello how are you?\")\n",
+    "]\n",
+    "\n",
+    "result=model.invoke(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "07af6ad1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatGroq(client=<groq.resources.chat.completions.Completions object at 0x135ba8280>, async_client=<groq.resources.chat.completions.AsyncCompletions object at 0x107f47520>, model_name='Gemma2-9b-It', model_kwargs={}, groq_api_key=SecretStr('**********'))"
+       "'Bonjour, comment allez-vous ?'"
       ]
      },
      "execution_count": 6,
@@ -31,31 +78,99 @@
     }
    ],
    "source": [
-    "from langchain_groq import ChatGroq\n",
-    "model = ChatGroq(model=\"Gemma2-9b-It\", groq_api_key=groq_api_key)\n",
-    "model"
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "parser=StrOutputParser()\n",
+    "parser.invoke(result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e51c5651",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07af6ad1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c20adb1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bonjour, comment allez-vous ?'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain=model | parser\n",
+    "chain.invoke(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6b5382d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "generic_prompt=\"Translate the following into{language}:\"\n",
+    "prompt= ChatPromptTemplate.from_messages(\n",
+    "  [\n",
+    "      (\"system\", generic_prompt),\n",
+    "      (\"user\", \"{text}\")\n",
+    "  ]  \n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3a9d2a2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SystemMessage(content='Translate the following intoFrench:', additional_kwargs={}, response_metadata={}),\n",
+       " HumanMessage(content='Hello', additional_kwargs={}, response_metadata={})]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result=prompt.invoke({\"language\":\"French\",\"text\":\"Hello\"})\n",
+    "result.to_messages()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "71de299c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bonjour.'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain= prompt | model | parser  \n",
+    "chain.invoke({\"language\":\"French\",\"text\":\"Hello\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5944e6a0",
    "metadata": {},
    "outputs": [],
    "source": []
